--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ footer{
   }
 }
 
-/*--- iOS Landing Page Fix
+/* --- iOS Landing Page Fix */
 section {
  	position: relative;
  	width: 100%;
@@ -175,9 +175,10 @@ section {
 	text-align: center;
 	vertical-align: middle;
 }
---*/
 
-/*--- iOS Fixed Image Fix
+
+
+/* --- iOS Fixed Image Fix */
 figure {
 	position: relative;
 	width: 100%;
@@ -205,4 +206,4 @@ figure {
           transform: translateZ(0);
 	will-change: transform;
 }
---*/
+--
