--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,14 @@ border-color: black;
   background-color: #f1ebe3;
 }
 
+#cnbc{
+  background: url(../images/padding.png) no-repeat center center fixed;
+  display: table;
+  height: 10%;
+  position: relative;
+  width: 100%;
+  background-size: cover;
+}
 
 
 .landing-text{
@@ -96,8 +104,8 @@ border-color: black;
 
 .padding{
   padding:10px 0;
-
 }
+
 
 .padding img{
   width:100%;
