--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,29 @@ html,body{
   height:100%;
   width:100%;
   background-color: #f1ebe3;
-  font-family: 'Josefin Sans', sans-serif
+  font-family: 'Open Sans', sans-serif;
 
 }
 
-h2, h3{
+h2 h3{
   font-family: "Raleway", sans-serif;
 }
 
 h4{
-  font-family: "Raleway", sans-serif;
+  font-family: 'Chivo', sans-serif;
 }
+
+
+/* p{
+  font-family: 'Chivo', sans-serif;
+} */
+/* p{
+  font-family: 'Open Sans', sans-serif;
+} */
+
+/* h4{
+  font-family: "Raleway", sans-serif;
+} */
 
 h3 span{
   background-color:#f1ebe3;
