--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+
+
+/* horizontal scrolling */
+
 :root {
   --gutter: 20px;
 }
@@ -21,9 +25,10 @@
 .hs {
   display: grid;
   grid-gap: calc(var(--gutter) / 2);
-  grid-template-columns: 10px repeat(var(--total), calc(50% - var(--gutter) * 2)) 10px;
+  grid-template-columns: 10px;
   grid-template-rows: minmax(150px, 1fr);
-
+  grid-auto-flow: column;
+  grid-auto-columns: calc(50% - var(--gutter) * 2);
   overflow-x: scroll;
   scroll-snap-type: x proximity;
   padding-bottom: calc(.75 * var(--gutter));
@@ -33,17 +38,32 @@
 .hs:before,
 .hs:after {
   content: '';
+  width: 10px;
+}
+
+
+/* Demo styles */
+
+/* body {
+  display: grid;
+  place-items: center;
+  background: #456173;
+} */
+
+div {
+  /* list-style: none; */
+  padding: 0;
 }
 
 
 .app {
-  width: 375px;
-  height: 667px;
-  background: #DBD0BC;
+  /* width: 375px;
+  height: 667px; */
+  /* background: #DBD0BC; */
   overflow-y: scroll;
 }
 
-.hs > li,
+.hs > div,
 .item {
   scroll-snap-align: center;
   padding: calc(var(--gutter) / 2 * 1.5);
@@ -54,6 +74,36 @@
   background: #fff;
   border-radius: 8px;
 }
+
+
+
+.no-scrollbar {
+  scrollbar-width: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+
+
+
+/* .hs > li,
+.item {
+  scroll-snap-align: center;
+  padding: calc(var(--gutter) / 2 * 1.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  border-radius: 8px;
+} */
+
+
+
+
 
 
 
@@ -120,7 +170,7 @@
 
 /* Content */
 .content {
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 
@@ -146,8 +196,8 @@ body{
 }
 
 html,body {
-    width: 100%;
-    overflow-x: hidden;
+    height: 100%;
+    /* overflow-x: hidden; */
 }
 
 h1,h2,h3,h4 {
