lexmark almost done

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-
-
+/* lexmark */
+#lexmark1, #lexmark2, #lexmark3, #lexmark4, #lexmark5, #lexmark6{
+  background: #f9f9f9;
+}
 
 /* horizontal scrolling */
 
