--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ div {
 
 
 
-#first, #second, #third, #forth, #fifth, #sixth, #first:hover, #second:hover, #third:hover, #fourth:hover, #fifth:hover, #sixth:hover, #seventh:hover{
+#first, #second, #third, #forth, #fifth, #sixth, #first:hover, #second:hover, #third:hover, #fourth:hover, #fifth:hover, #sixth:hover, #seventh:hover, #eighth:hover{
 	transition: all 0.1s;
 	-webkit-transition: all 0.1s;
 	-o-transition: all 0.1s;
@@ -126,11 +126,11 @@ div {
 #first:hover {
 	background: #EDB059;
 }
-#first:hover #second:hover, #third:hover,#fourth:hover, #fifth:hover, #sixth:hover, #seventh:hover h2 {
+#first:hover #second:hover, #third:hover,#fourth:hover, #fifth:hover, #sixth:hover, #seventh:hover, #eighth:hover h2 {
 	color: rgba(0, 0, 0);
   	color: #fff;
 }
-#first:hover, #second:hover, #third:hover,#fourth:hover, #fifth:hover, #sixth:hover,#seventh:hover h4 {
+#first:hover, #second:hover, #third:hover,#fourth:hover, #fifth:hover, #sixth:hover,#seventh:hover, #eighth:hover h4 {
 	color: #fff;
 }
 #first:hover h2::after {
@@ -162,6 +162,9 @@ div {
 	background: #EF8E9B;
 }
 
+#eighth:hover{
+  background: #1F77A3;
+}
 .logo {
   font-size:50px;
   border-radius:50%;
@@ -764,6 +767,24 @@ text-align: center;
         height: 100vh;
         text-align: center;
           }
+
+          #brewary {
+          background: url('../images/brewerypage.png') no-repeat;
+          -webkit-background-size: cover;
+          background-size: cover;
+          background-position: center;
+          background-color: #fff;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+          -ms-flex-align: center;
+          align-items: center;
+          height: 100vh;
+          text-align: center;
+            }
 
       #google {
       background: url('../images/googlepage.png') no-repeat;
