--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
 	text-align: center;
 	line-height: 46px;
 	font-size: 24px;
-	color: var(--grey);
+	/* color: var(--grey); */
 	left: 0;
 	top: 0;
 	height: 46px;
@@ -92,66 +92,12 @@
 	fill: none;
 }
 .progress-wrap svg.progress-circle path {
-	stroke: var(--grey);
-	stroke-width: 4;
+	stroke: black;
+	stroke-width: 5;
 	/* box-sizing:border-box; */
 	-webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-
-
-.circle {
-	cursor: pointer;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	left: -5px;
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background: var(--black-blue-light-3);
-	box-shadow: 0 4px 4px rgba(26,53,71,0.25), 0 0 0 1px rgba(26,53,71,0.07);
-	animation: border-transform 10s linear infinite alternate forwards;
-}
-.circle:hover {
-	box-shadow: 0 8px 8px rgba(26,53,71,0.25), 0 0 0 1px rgba(26,53,71,0.07);
-}
-.circle:before {
-	position: absolute;
-	font-family: 'unicons';
-	content: '\eac1';
-	top: 0;
-	left: 0;
-	z-index: 2;
-	font-size: 20px;
-	line-height: 40px;
-	text-align: center;
-	width: 100%;
-	height: 40px;
-	opacity: 1;
-	color: var(--grey);
-	-webkit-transition: all 300ms linear;
-	transition: all 300ms linear;
-}
-.circle:after {
-	position: absolute;
-	font-family: 'unicons';
-	content: '\eb8f';
-	top: 0;
-	left: 0;
-	z-index: 2;
-	font-size: 20px;
-	line-height: 40px;
-	text-align: center;
-	width: 100%;
-	height: 40px;
-	color: var(--yellow);
-	opacity: 0;
-	-webkit-transition: all 300ms linear;
-	transition: all 300ms linear;
-}
-
-
 
 
 
