--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ padding-bottom: 60px;
 
 
 /* home section */
-#about {
+#me {
     background: url('../images/landingpage.png') no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
